@@ -1,4 +1,11 @@
-2005-07-05  Diego Gonzalez  <diego@pemas.net
+2005-07-05  Diego Gonzalez  <diego@pemas.net>
+
+	* gnome-about-me.c (about_me_update_photo): Improve the behaviour 
+	  of the capplet when using large images (scale the image down to 
+	  a resonable size before storing it in EDS).
+	* e-image-chooser.c: remove debug output
+
+2005-07-05  Diego Gonzalez  <diego@pemas.net>
 
 	Patch by Jaap A. Haitsma <jaap@haitsma.org>
 
